--- a/seq2seq.ipynb
+++ b/seq2seq.ipynb
@@ -19,7 +19,8 @@
     "import torch.nn as nn\n",
     "from torch import optim\n",
     "import torch.nn.functional as F\n",
-    "\n",
+    "from sklearn.utils import shuffle\n",
+    "from math import ceil\n",
     "import sequence"
    ]
   },
@@ -29,21 +30,20 @@
    "metadata": {
     "colab": {},
     "colab_type": "code",
-    "collapsed": true,
+    "collapsed": false,
     "id": "78jiih2gsN1c"
    },
    "outputs": [],
    "source": [
-    "# global 変数\n",
     "(x_train, y_train), (x_test, y_test) = sequence.load_data()\n",
+    "char_to_id, id_to_char = sequence.get_vocab()\n",
+    "\n",
+    "device = torch.device(\"cuda:0\" if torch.cuda.is_available() else \"cpu\")\n",
+    "\n",
     "x_train = torch.tensor(x_train)\n",
     "x_test = torch.tensor(x_test)\n",
     "y_train = torch.tensor(y_train)\n",
     "y_test = torch.tensor(y_test)\n",
-    "\n",
-    "char_to_id, id_to_char = sequence.get_vocab()\n",
-    "\n",
-    "device = torch.device(\"cuda:0\" if torch.cuda.is_available() else \"cpu\")\n",
     "\n",
     "# hyper-parameter\n",
     "MAX_INPUT = 7\n",
@@ -53,12 +53,47 @@
     "vocab_size = len(char_to_id)\n",
     "LEARNING_RATE = 0.001\n",
     "BATCH_SIZE = 100\n",
-    "EPOCH = 100"
+    "EPOCH = 100\n",
+    "batch_num = ceil(len(x_train) // BATCH_SIZE)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 3,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "def train_loader(data, target, batch_size=100):\n",
+    "    input_batchs = []\n",
+    "    output_batchs = []\n",
+    "#     data, target = shuffle(data, target)\n",
+    "    \n",
+    "    for i in range(batch_num):\n",
+    "        if i == batch_num - 1:\n",
+    "            each_input_batchs =  data[i * batch_size:]\n",
+    "            each_output_batchs = target[i * batch_size:]\n",
+    "        else:\n",
+    "            each_input_batchs =  data[i * batch_size: (i + 1) * batch_size]\n",
+    "            each_output_batchs = target[i * batch_size:(i + 1) * batch_size]\n",
+    "        input_batchs.append(each_input_batchs)\n",
+    "        output_batchs.append(each_output_batchs)\n",
+    "    return input_batchs, output_batchs"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -80,20 +115,19 @@
     "    def forward(self, indices, batch_size=100):\n",
     "        # indices = tensor([batch_size, MAX_INPUT(7)])\n",
     "        embedding = self.embedding(indices)\n",
-    "        assert(indices.size(1) == 7)\n",
-    "        if embedding.dim() == 2:\n",
-    "            embedding = torch.unsqueeze(embedding, 1) #3次元にしている\n",
+    "        if embedding.dim() == 2: #　バッチサイズが1の時3次元にしている\n",
+    "            embedding = torch.unsqueeze(embedding, 1)\n",
     "        _, state = self.gru(embedding, torch.zeros(1, batch_size, self.hidden_dim).to(device)) #最初の入力は0ベクトル\n",
     "        return state"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {
     "colab": {},
     "colab_type": "code",
-    "collapsed": true,
+    "collapsed": false,
     "id": "WiA_8ntc8Ypp"
    },
    "outputs": [],
@@ -110,7 +144,7 @@
     "\n",
     "    def forward(self, indices, init_hidden):\n",
     "        embedding = self.embedding(indices)\n",
-    "        if embedding.dim() == 2:\n",
+    "        if embedding.dim() == 2: #バッチサイズが1の時3次元に変換\n",
     "            embedding = torch.unsqueeze(embedding, 1)\n",
     "        output, state = self.gru(embedding, init_hidden) #最初の入力は0ベクトル\n",
     "        output = self.linear(output)\n",
@@ -119,7 +153,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {
     "collapsed": true
    },
@@ -154,7 +188,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {
     "collapsed": true
    },
@@ -189,7 +223,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "metadata": {
     "collapsed": false
    },
@@ -201,31 +235,90 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 35,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([ True, False])"
+      ]
+     },
+     "execution_count": 37,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "np.equal(pred_Y, Y).all(axis=1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 42,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
-    "from sklearn.utils import shuffle\n",
-    "from math import ceil\n",
-    "\n",
-    "def train_loader(data, target, batch_size=100):\n",
-    "    input_batchs = []\n",
-    "    output_batchs = []\n",
-    "#     data, target = shuffle(data, target)\n",
-    "    \n",
-    "    batch_num = ceil(len(data) // batch_size)\n",
-    "    for i in range(batch_num):\n",
-    "        if i == batch_num - 1:\n",
-    "            each_input_batchs =  data[i * batch_size:]\n",
-    "            each_output_batchs = target[i * batch_size:]\n",
-    "        else:\n",
-    "            each_input_batchs =  data[i * batch_size: (i + 1) * batch_size]\n",
-    "            each_output_batchs = target[i * batch_size:(i + 1) * batch_size]\n",
-    "        input_batchs.append(each_input_batchs)\n",
-    "        output_batchs.append(each_output_batchs)\n",
-    "    return input_batchs, output_batchs"
+    "def calc_accuracy(pred_Y, Y):\n",
+    "    \"\"\"pred_Yと、Yが列方向に一致しているか\"\"\"\n",
+    "    same_num = np.equal(pred_Y, Y).all(axis=1).sum()\n",
+    "    same_rate = same_num / len(Y)\n",
+    "    return same_rate"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 44,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "True\n"
+     ]
+    }
+   ],
+   "source": [
+    "pred_Y = np.array([[1, 2, 3], [2, 3, 1]])\n",
+    "Y = np.array([[1, 2, 3], [2, 2, 2]])\n",
+    "print(calc_accuracy(pred_Y, Y) == 0.5)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 45,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "True\n"
+     ]
+    }
+   ],
+   "source": [
+    "pred_Y = np.array([[1, 2, 3], [2, 3, 1], [3, 3, 4], [1, 1, 1]])\n",
+    "Y = np.array([[1, 2, 3], [2, 2, 2], [3, 3, 4], [1, 1, 1]])\n",
+    "print(calc_accuracy(pred_Y, Y) == 0.75)"
    ]
   },
   {
@@ -240,13 +333,16 @@
      "output_type": "stream",
      "text": [
       "Training..\n",
-      "10.43000602722168 10.346759796142578\n",
-      "10.361082077026367 10.295493125915527\n",
-      "10.293654441833496 10.245674133300781\n",
-      "10.22774600982666 10.197254180908203\n",
-      "10.163341522216797 10.150217056274414\n",
-      "10.100420951843262 10.104557991027832\n",
-      "10.038954734802246"
+      "0.006977777777777778 0.0062\n",
+      "5.394304948382907 5.454184532165527\n",
+      "0.007244444444444445 0.0068\n",
+      "5.370049650404188 5.432393550872803\n",
+      "0.007311111111111111 0.0076\n",
+      "5.346923588646783 5.411534786224365\n",
+      "0.0077555555555555555 0.008\n",
+      "5.324688367843628 5.389551639556885\n",
+      "0.0077555555555555555 0.0084\n",
+      "5.302518379423353 5.367369651794434\n"
      ]
     }
    ],
@@ -255,39 +351,42 @@
     "\n",
     "train_losses = []\n",
     "test_losses = []\n",
+    "train_accuracies = []\n",
+    "test_accuracies = []\n",
+    "\n",
+    "train_answer = y_train[:, 1:]\n",
+    "test_answer = y_test[:, 1:]\n",
     "\n",
     "for e in range(EPOCH):\n",
     "    train_loss = 0\n",
     "    input_batchs, output_batchs = train_loader(x_train, y_train)\n",
     "\n",
+    "#     train_batch_outputs = \n",
     "    for i in range(len(input_batchs)): # mini-batchごとに最適化\n",
     "        input_batch = input_batchs[i].to(device)\n",
     "        output_batch = output_batchs[i].to(device)\n",
-    "        \n",
-    "#         # 重みの初期化\n",
-    "#         encoder_optimizer.zero_grad()\n",
-    "#         decoder_optimizer.zero_grad()\n",
-    "        \n",
-    "#         train_loss, train_output =  model.forward(input_batch, output_batch)\n",
     "\n",
-    "#         # backward\n",
-    "#         train_loss.backward()\n",
-    "#         train_loss = train_loss.item()\n",
+    "        trainer.fit(input_batch, output_batch)\n",
+    "        train_output = trainer.predict()\n",
+    "        train_batch_outputs = np.concatenate([train_batch_outputs, train_output], axis=0) if i != 0 else train_output\n",
+    "        train_loss += trainer.get_loss()\n",
     "\n",
-    "#         encoder_optimizer.step()\n",
-    "#         decoder_optimizer.step()\n",
+    "    train_loss /= batch_num\n",
     "\n",
-    "    trainer.fit(input_batch, output_batch)\n",
-    "    train_output = trainer.predict()\n",
-    "    train_loss = trainer.get_loss()\n",
-    "    \n",
+    "    train_accuracy = calc_accuracy(train_batch_outputs, train_answer.numpy())\n",
+    "\n",
     "    train_losses.append(train_loss)\n",
-    "    \n",
-    "    test_loss, test_output = model.forward(x_test, y_test)\n",
+    "    train_accuracies.append(train_accuracy)\n",
+    "\n",
+    "    test_loss, test_outputs = model.forward(x_test, y_test)\n",
     "        \n",
     "    test_loss = test_loss.item()\n",
     "    test_losses.append(test_loss)\n",
     "    \n",
+    "    test_accuracy = calc_accuracy(test_outputs, test_answer.numpy())\n",
+    "    test_accuracies.append(test_accuracy)\n",
+    "    \n",
+    "    print(train_accuracy, test_accuracy)\n",
     "    print(train_loss, test_loss)"
    ]
   },
